# delta-file-ingestor

./: Cargo.toml  README.md
src/: checkpointing.rs  lib.rs  main.rs  processor.rs  test_utils.rs
src/aws/: mod.rs  model.rs  sqs.rs
src/hdfs/: file_stream.rs  mod.rs  utils.rs
src/local/: mod.rs
src/uc/: client.rs  mod.rs  model.rs
test_files/: uc_schema.json
