[package]
name = "delta-file-ingest"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "^1"
async-trait = "^0.1"
clap = { version = "^4", features = ["color", "derive", "string"] }
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0", features = ["deflate"] }
bytes = "^1"
futures = "^0.3"
deltalake = { git = "https://github.com/delta-io/delta-rs", features = ["s3"] }
aws-sdk-sqs = "^0.23"
aws-config = "^0.53"
humantime = "^2"
tracing = "^0.1"
object_store = "^0.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
notify = "^5"
itertools = "^0.10"

[dev-dependencies]
tempfile = "^3"
